--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.0.0",
     "d3": "^7.8.5",
+    "google-auth-library": "^10.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "mongodb": "^6.2.0",
