--- a/.env.local
+++ b/.env.local
@@ -14,5 +14,11 @@ CLOUDINARY_API_KEY=725931559882733
 CLOUDINARY_API_SECRET=9zWIZi7Kgj3mtanKunN88_WfByM
 CLOUDINARY_URL=cloudinary://725931559882733:9zWIZi7Kgj3mtanKunN88_WfByM@dmydag1zp
 
+# Email Configuration (Gmail SMTP)
+# Replace with your Gmail credentials
+EMAIL_USER=kloydmatyo@gmail.com
+EMAIL_APP_PASSWORD=vgotijawhehccyjg
+
+
 
 
