--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/d3": "^7.4.3",
+    "@types/nodemailer": "^7.0.2",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
@@ -28,6 +29,7 @@
     "next": "14.0.0",
     "next-auth": "^4.24.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
     "postcss": "^8.4.31",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
