--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "d3": "^7.8.5",
     "google-auth-library": "^10.4.0",
     "html2canvas": "^1.4.1",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.292.0",
